# PyReady

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  POLICY_GUIDE.md  README.md  pyproject.toml
pyready/: __init__.py
pyready/analysis/: __init__.py  ast_parser.py  dependency_graph.py
pyready/cli/: __init__.py  check.py  diff.py  explain.py  main.py
pyready/env_checker/: __init__.py  dependency_checker.py  env_vars_checker.py  expectations.py  orchestrator.py  python_version.py  venv_detector.py
pyready/explanation/: __init__.py  generator.py
pyready/ingestion/: __init__.py  repo_scanner.py
pyready/llm/: __init__.py  client.py  groq_client.py
pyready/policy/: __init__.py  engine.py  explain.py
pyready/project_detection/: __init__.py  capabilities.py  detector.py  evidence.py  models.py
pyready/project_intent/: __init__.py  classifier.py  models.py
pyready/qa/: __init__.py  answer_generator.py  artifact_selector.py  classifier.py
pyready/recommendations/: __init__.py  engine.py  models.py
pyready/reporting/: __init__.py  diff.py  generator.py
pyready/run_detection/: __init__.py  detector.py  models.py
pyready/schemas/: __init__.py  capability_schema.py  diff_schema.py  env_schema.py  policy_explain_schema.py  policy_schema.py  repo_schema.py  report_schema.py
